+updated perf test Grizzly runner start/stop script +fixed wrong copyright years from previous pull request commit
Change-Id: I5a54c12da6acfa8249e9970b7584a1d15cdf139e
Signed-off-by: Jakub Podlesak <jakub.podlesak@oracle.com>